# research-input-dependence

./: .gitignore  README.md  pyproject.toml
configs/: experiment.yaml  models.yaml
data/: prompts.txt
results/residual_input_dependence_v001/: manifest.json
results/residual_input_dependence_v001/tables/: gpt2-small_convergence.csv  gpt2-small_reliability.csv  model_layer_summary.csv  opt-125m_convergence.csv  opt-125m_reliability.csv  pythia-160m_convergence.csv  pythia-160m_reliability.csv
results/residual_input_dependence_v002/: manifest.json
results/residual_input_dependence_v002/tables/comparison/: attn_out_model_layer_summary.csv  mlp_out_model_layer_summary.csv  resid_delta_model_layer_summary.csv  resid_post_model_layer_summary.csv
results/residual_input_dependence_v003/: manifest.json
results/residual_input_dependence_v003/tables/comparison/: attn_out_model_layer_summary.csv  mlp_out_model_layer_summary.csv  resid_delta_model_layer_summary.csv  resid_post_model_layer_summary.csv
src/activations/: collect_residuals.py
src/data/: load_prompts.py  load_text_chunks.py
src/experiments/: artifacts.py  run_analysis.py  run_collect_stats.py  run_compute_metrics.py  run_pipeline.py  smoke_test_models.py
src/metrics/: input_dependence.py
src/models/: load_model.py
src/stats/: running_stats.py
tests/: test_core.py
