[project]
name = "residual-input-dependence"
version = "0.1.0"
description = "Measuring input-invariant and input-dependent residual-stream structure across transformer models."
requires-python = ">=3.10"

dependencies = [
    "torch>=2.2,<3",
    "transformer-lens>=2,<4",
    "datasets>=2.18,<6",
    "pyyaml>=6,<7",
    "tqdm>=4.66,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
