[project]
name = "residual-input-dependence"
version = "0.1.0"
description = "Measuring input-invariant and input-dependent residual-stream structure across transformer models."
requires-python = ">=3.10"

dependencies = [
    "torch>=2.4,<2.5",
    "transformer-lens==2.15.4",
    "transformers>=4.43,<5",
    "datasets>=2.18,<6",
    "matplotlib>=3.8,<4",
    "pyyaml>=6,<7",
    "tqdm>=4.66,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
