[project]
name = "residual-input-dependence"
version = "0.1.0"
description = "Measuring persistent and input-varying residual-stream activity across transformer models."
requires-python = ">=3.10"

dependencies = [
    "torch>=2.6,<3",
    "transformer-lens>=3.5,<4",
    "transformers>=5.4,<6",
    "datasets>=2.18,<6",
    "matplotlib>=3.8,<4",
    "pyyaml>=6,<7",
    "tqdm>=4.66,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
